# bank_etl

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: ci.yml
sqlite/: create_table_category.sql  create_table_transactions.sql
src/bank_etl/: __init__.py  cli.py
src/bank_etl/lib/: __init__.py  analysis.py  categorize.py  etl.py  ingest.py  pdf_extract.py  utils.py
tests/: test_analysis.py  test_categorize.py  test_ingest.py  test_utils.py
